# datasage

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_web.py
.github/workflows/: ci.yml
datasage/: __init__.py  cli.py  enhanced_generator.py  model.py  profiler.py  prompt_builder.py  report_formatter.py  verifier.py  web_app.py
examples/: sample_small.csv
tests/: test_cli_smoke.py  test_profiler.py  test_prompt_builder.py  test_verifier.py
